--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         { id: 2, name: 'Damien', role: 'Cofounder' },
         { id: 3, name: 'Nick', role: 'Cofounder' },
         { id: 4, name: 'Gurneet', role: 'Cofounder' },
-        { id: 5, name: 'Ilias', role: 'Cofounder' },
+        { id: 5, name: 'Iliass', role: 'Cofounder' },
         { id: 6, name: 'Lawratou', role: 'Cofounder' },
         
       ],
@@ -287,3 +287,4 @@
   </script>
 </body>
 </html>
+
