--- a/home.html
+++ b/home.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Link CSS to HTML</title>
+  <meta name="viewport" content="width=device-width, initial scale=1.0">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Home Page</title>
 </head>
-</body>
+<body></body>
 </html>
