--- a/ProductFeatures.html
+++ b/ProductFeatures.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta name="viewport" content="width=device-width, initial scale=1.0">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Product Features</title>
+</head>
+<body></body>
+</html>
