Add navigation and title to home page

--- a/home.html
+++ b/home.html
@@ -6,5 +6,20 @@
   <link rel="stylesheet" href="style.css">
   <title>Home Page</title>
 </head>
-<body></body>
+<body>
+  <nav class="navbar">
+    <div class="nav_container">
+      <ul>
+        <lil><a href="home.html">Home</a></lil>
+        <lil><a href="team.html">About Us</a></lil>
+        <lil><a href="ProductFeatures.html">Product Features</a></lil>
+      </ul>
+    </div>
+  </nav>
+  <div class="titlebox">
+    <h1 class="toptext">PlandIt</h1>
+    <h2 class="bottomtext">uOttawa</h2>
+  </div>
+
+</body>
 </html>
