Change title and add navigation to ProductFeatures.html
Updated the title and added a navigation bar with links.

--- a/ProductFeatures.html
+++ b/ProductFeatures.html
@@ -4,8 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Home Page</title>
+  <title>Product Features</title>
 </head>
-<body></body>
+<body>
+  <nav class="navbar">
+    <div class="nav_container">
+      <ul>
+        <lil><a href="home.html">Home</a></lil>
+        <lil><a href="team.html">About Us</a></lil>
+        <lil><a href="ProductFeatures.html">Product Features</a></lil>
+      </ul>
+    </div>
+  </nav>
+  
+</body>
 </html>
 
