Add navigation bar to team.html
Added a navigation bar with links to Home, About Us, and Product Features.

--- a/team.html
+++ b/team.html
@@ -6,6 +6,18 @@
   <link rel="stylesheet" href="style.css">
   <title>Team Page</title>
 </head>
-<body></body>
+<body>
+<nav class="navbar">
+    <div class="nav_container">
+      <ul>
+        <lil><a href="home.html">Home</a></lil>
+        <lil><a href="team.html">About Us</a></lil>
+        <lil><a href="ProductFeatures.html">Product Features</a></lil>
+      </ul>
+    </div>
+  </nav>
+
+  
+</body>
 </html>
 
