Fix link to Home in navigation menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <nav class="navbar">
     <div class="nav_container">
       <ul>
-        <lil><a href="home.html">Home</a></lil>
+        <lil><a href="index.html">Home</a></lil>
         <lil><a href="team.html">About Us</a></lil>
         <lil><a href="ProductFeatures.html">Product Features</a></lil>
       </ul>
