--- a/ProductFeatures.html
+++ b/ProductFeatures.html
@@ -10,9 +10,9 @@
   <nav class="navbar">
     <div class="nav_container">
       <ul>
-        <lil><a href="home.html">Home</a></lil>
-        <lil><a href="team.html">About Us</a></lil>
-        <lil><a href="ProductFeatures.html">Product Features</a></lil>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="team.html">About Us</a></li>
+        <li><a href="ProductFeatures.html">Product Features</a></li>
       </ul>
     </div>
   </nav>
