Update navigation links to include PlandIt path

--- a/team.html
+++ b/team.html
@@ -10,9 +10,9 @@
  <nav class="navbar">
     <div class="nav_container">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="team.html">About Us</a></li>
-        <li><a href="ProductFeatures.html">Product Features</a></li>
+        <li><a href="/PlandIt/index.html">Home</a></li>
+        <li><a href="/PlandIt/team.html">About Us</a></li>
+        <li><a href="/PlandIt/ProductFeatures.html">Product Features</a></li>
       </ul>
     </div>
   </nav>
