Add link to calendar in index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h1 class="toptext">PlandIt</h1>
     <h2 class="bottomtext">uOttawa</h2>
   </div>
+  <div class="container"><a class="calendarbox" href="calendar.html">Calendar</a></div>
 
 </body>
 </html>
