Revamp Product Features page layout and styles
Updated the HTML structure and styling for the Product Features page, including a new navigation layout and enhanced CSS styles.

--- a/ProductFeatures.html
+++ b/ProductFeatures.html
@@ -1,22 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Product Features</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PlandIt • Product Features</title>
+  <style>
+    :root{--uo-garnet:#8a0f0a;--uo-garnet-700:#6f0c08;--uo-sand:#f7f4f1;--uo-stone:#e9e4df;
+      --uo-ink:#1f1f1f;--uo-ink-60:#6b6b6b;--uo-surface:#ffffff;--uo-grid:#efefef;--accent:#0a7ea4;
+      --shadow:0 1px 3px rgba(0,0,0,.1)}
+    .theme-dark{--uo-sand:#111213;--uo-stone:#2a2a2a;--uo-surface:#1b1b1c;--uo-ink:#e8e8e8;--uo-ink-60:#a1a1a1;--uo-grid:#2b2b2b;--shadow:0 1px 3px rgba(0,0,0,.35)}
+    *{box-sizing:border-box}
+    body{margin:0;font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial;background:var(--uo-sand);color:var(--uo-ink)}
+    a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
+    .navbar{background:var(--uo-garnet);color:#fff;box-shadow:var(--shadow)}
+    .nav_container{max-width:1100px;margin:0 auto;padding:10px 16px}
+    .navbar ul{margin:0;padding:0;list-style:none;display:flex;gap:20px}
+    .navbar a{color:#fff;font-weight:600}
+    header.pagebar{background:var(--uo-surface);border-bottom:1px solid var(--uo-stone)}
+    .pagebar__inner{max-width:1100px;margin:0 auto;padding:12px 16px;display:flex;align-items:center;gap:12px}
+    .brand{font-weight:800;color:var(--uo-garnet);font-size:20px}
+    .spacer{flex:1}
+    .btn{border:1px solid var(--uo-stone);background:var(--uo-surface);color:var(--uo-ink);padding:7px 12px;border-radius:10px;cursor:pointer}
+    .btn:hover{background:#fafafa}.theme-dark .btn:hover{background:#232324}
+    .btn.primary{background:var(--uo-garnet);color:#fff;border-color:var(--uo-garnet)} .btn.primary:hover{background:var(--uo-garnet-700)}
+    .wrap{max-width:1100px;margin:18px auto;padding:0 16px;display:grid;grid-template-columns:260px 1fr;gap:18px}
+    .card{background:var(--uo-surface);border:1px solid var(--uo-stone);border-radius:12px;box-shadow:var(--shadow)}
+    .pad{padding:14px} h1,h2,h3{margin:.2em 0 .4em} h1{font-size:28px} h2{font-size:20px} h3{font-size:16px;color:var(--uo-ink-60)}
+    p{margin:.4em 0}.muted{color:var(--uo-ink-60)}
+    .toc li{margin:4px 0}.toc a{display:block;padding:6px 8px;border-radius:8px}.toc a:hover{background:#f1f1f1}.theme-dark .toc a:hover{background:#202022}
+    .grid{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:14px}@media(max-width:880px){.wrap{grid-template-columns:1fr}.grid{grid-template-columns:1fr}}
+    .feature{padding:12px;border:1px solid var(--uo-stone);border-radius:12px}
+    .tag{display:inline-block;font-size:12px;padding:2px 8px;border-radius:999px;background:#f0f7fb;color:#0a7ea4;margin-left:8px}.theme-dark .tag{background:#10212a}
+    .kbd{font:12px/1.2 ui-monospace,SFMono-Regular,Consolas,monospace;background:#f3f3f3;padding:2px 6px;border:1px solid var(--uo-stone);border-bottom-width:2px;border-radius:6px}.theme-dark .kbd{background:#1f1f20}
+    .list{padding-left:18px}.ok{color:#198754;font-weight:600}.warn{color:#8a0f0a;font-weight:600}
+    .foot{margin:28px 0 10px;text-align:center;color:var(--uo-ink-60)}
+  </style>
 </head>
 <body>
   <nav class="navbar">
-    <div class="nav_container">
-      <ul>
-        <li><a href="/PlandIt/index.html">Home</a></li>
-        <li><a href="/PlandIt/team.html">About Us</a></li>
-        <li><a href="/PlandIt/ProductFeatures.html">Product Features</a></li>
-      </ul>
+  <div class="nav_container">
+    <ul>
+      <li><a href="./calendar.html">Calendar</a></li>
+      <li><a href="./productbutton.html">Product Features</a></li>
+    </ul>
+  </div>
+</nav>
+
+  <header class="pagebar">
+    <div class="pagebar__inner">
+      <div class="brand">PlandIt • Product Features</div>
+      <div class="spacer"></div>
+      <button class="btn" id="themeBtn" aria-pressed="false" title="Toggle theme">☀</button>
+      <a class="btn primary" href="./calendar.html">Open Calendar</a>
     </div>
-  </nav>
-  
+  </header>
+
+  <main class="wrap">
+    <aside class="card pad">
+      <h3>Overview</h3>
+      <ul class="toc">
+        <li><a href="#views">Calendar Views</a></li>
+        <li><a href="#events">Events & Editing</a></li>
+        <li><a href="#shortcuts">Keyboard Shortcuts</a></li>
+        <li><a href="#uo">Built for uOttawa</a></li>
+        <li><a href="#privacy">Privacy & Storage</a></li>
+        <li><a href="#roadmap">Roadmap</a></li>
+        <li><a href="#faq">FAQ</a></li>
+      </ul>
+    </aside>
+
+    <section class="card pad">
+      <h1>Everything PlandIt can do</h1>
+      <p class="muted">Your academic-first planning tool in uOttawa colours. Below is a breakdown of what’s in the product today and what’s coming next.</p>
+
+      <h2 id="views">Calendar Views <span class="tag">Month & Week</span></h2>
+      <div class="grid">
+        <div class="feature">
+          <h3>Month view</h3>
+          <p>Clean month grid with coloured event chips. Click any day to create a new event pre-filled with that date.</p>
+          <ul class="list"><li>Mini calendar to jump months/days</li><li>Prev / Today / Next controls</li><li>uOttawa Garnet palette</li></ul>
+        </div>
+        <div class="feature">
+          <h3>Week view</h3>
+          <p>Hour-by-hour grid; events are positioned by start/end time—perfect for classes, labs, and exams.</p>
+        </div>
+      </div>
+
+      <h2 id="events" style="margin-top:14px">Events & Editing <span class="tag">Create / Update / Delete</span></h2>
+      <div class="grid">
+        <div class="feature"><h3>Quick Create</h3><p>Press <strong>Create</strong> or click a day to open the event sheet. Set <em>title</em>, <em>date</em>, <em>start</em>, <em>end</em>, <em>location</em>, and <em>colour</em>.</p></div>
+        <div class="feature"><h3>Inline Edit</h3><p>Click any event to edit or delete. Changes persist via localStorage.</p></div>
+      </div>
+
+      <h2 id="shortcuts" style="margin-top:14px">Keyboard Shortcuts <span class="tag">Power user</span></h2>
+      <ul class="list">
+        <li><span class="kbd">W</span> Week</li><li><span class="kbd">M</span> Month</li><li><span class="kbd">T</span> Today</li>
+        <li><span class="kbd">← / →</span> Previous / Next</li>
+        <li><span class="kbd">D, Y, A, X</span> (coming soon: Day, Year, Agenda, 4-day)</li>
+      </ul>
+
+      <h2 id="uo" style="margin-top:14px">Built for uOttawa <span class="tag">Campus-ready</span></h2>
+      <div class="grid">
+        <div class="feature"><h3>Garnet theme</h3><p>Follows uOttawa branding in both light and dark modes.</p></div>
+        <div class="feature"><h3>Course-centric</h3><p>Great for scheduling lectures, labs, tutorials, midterms, finals with locations like <em>CBY A03</em> or <em>MRN 150</em>.</p></div>
+      </div>
+
+      <h2 id="privacy" style="margin-top:14px">Privacy & Storage <span class="tag">Local-first</span></h2>
+      <ul class="list"><li>Works offline; stored in your browser (<strong>localStorage</strong>)</li><li>Clearing site data removes events (ICS export on roadmap)</li></ul>
+
+      <h2 id="roadmap" style="margin-top:14px">Roadmap</h2>
+      <ul class="list">
+        <li>Drag to move/resize events</li><li>Import/Export (.ics)</li><li>Multiple calendars & colours</li>
+        <li>Optional Google Calendar sync</li><li>Tasks integration (dated tasks on calendar)</li>
+      </ul>
+
+      <h2 id="faq" style="margin-top:14px">FAQ</h2>
+      <p><strong>Account needed?</strong> No—everything runs locally.</p>
+      <p><strong>Switch themes?</strong> Use the ☀/🌙 button; we remember your choice.</p>
+      <p><strong>Why uOttawa colours?</strong> Because PlandIt is designed for uOttawa students.</p>
+
+      <p class="foot">Back to <a href="./index.html">Home</a> • Open the <a href="./calendar.html">Calendar</a></p>
+    </section>
+  </main>
+
+  <script>
+    // Theme toggle (same as calendar)
+    const themeKey='plandit_theme';
+    const btn=document.getElementById('themeBtn');
+    function applyTheme(mode){
+      if(mode==='dark'){ document.body.classList.add('theme-dark'); btn.textContent='🌙'; btn.setAttribute('aria-pressed','true'); }
+      else { document.body.classList.remove('theme-dark'); btn.textContent='☀'; btn.setAttribute('aria-pressed','false'); }
+      localStorage.setItem(themeKey, mode);
+    }
+    (function init(){
+      const saved=localStorage.getItem(themeKey);
+      if(saved){ applyTheme(saved); }
+      else { const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches; applyTheme(prefersDark?'dark':'light'); }
+      btn.addEventListener('click', ()=>{ const cur=document.body.classList.contains('theme-dark')?'dark':'light'; applyTheme(cur==='dark'?'light':'dark'); });
+    })();
+  </script>
 </body>
 </html>
 
