--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/PlandIt/style.css">
   <title>Team Page</title>
 </head>
 <body>
@@ -16,7 +16,8 @@
       </ul>
     </div>
   </nav>
-
+<h1>Meet Our Team</h1>
+<div class="rectangle_bar"></div>
   
 </body>
 </html>
