--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/PlandIt/style.css">
+  <link rel="logo" href="/PlandIt/LOGO.JPG" type="image"/>
   <title>Home Page</title>
 </head>
 <body>
