--- a/team.html
+++ b/team.html
@@ -1,4 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/PlandIt/style.css">
+  <title>Team Page</title>
+</head>
+<body>
+  <nav class="navbar">
+    <div class="nav_box">
+      <ul>
+        <li><a href="/PlandIt/index.html">Home</a></li>
+        <li><a href="/PlandIt/team.html">About Us</a></li>
+        <li><a href="/PlandIt/ProductFeatures.html">Product Features</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <h1>Meet Our Team</h1>
+  <div class="rectangle_bar"></div>
+
+  <div class="team_section">
+    <div class="team_box">
+      <h2>Member 1</h2>
+      <p>Role: Developer</p>
+      <p>Description about Member 1.</p>
+    </div>
+
+    <div class="team_box">
+      <h2>Member 2</h2>
+      <p>Role: Designer</p>
+      <p>Description about Member 2.</p>
+    </div>
+
+    <div class="team_box">
+      <h2>Member 3</h2>
+      <p>Role: Project Manager</p>
+      <p>Description about Member 3.</p>
+    </div>
+
+    <div class="team_box">
+      <h2>Member 4</h2>
+      <p>Role: Marketing</p>
+      <p>Description about Member 4.</p>
+    </div>
+
+    <div class="team_box">
+      <h2>Member 5</h2>
+      <p>Role: Tester</p>
+      <p>Description about Member 5.</p>
+    </div>
+
+    <div class="team_box">
+      <h2>Member 6</h2>
+      <p>Role: Support</p>
+      <p>Description about Member 6.</p>
+    </div>
+  </div>
 
 </body>
 </html>
-
