--- a/team.html
+++ b/team.html
@@ -1,31 +1,52 @@
-<div class="flex_section">
-  <div class="flex_box">
-    <h2>Member 1</h2>
-    <p>Role: Co-Founder</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/PlandIt/style.css">
+  <title>Team Page</title>
+</head>
+<body>
+  <nav class="navbar">
+    <div class="nav_box">
+      <ul>
+        <li><a href="/PlandIt/index.html">Home</a></li>
+        <li><a href="/PlandIt/team.html">About Us</a></li>
+        <li><a href="/PlandIt/ProductFeatures.html">Product Features</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <h1>Meet Our Team</h1>
+  <div class="rectangle_bar"></div>
+
+  <!-- 6 Flexboxes in a 3x2 grid -->
+  <div class="flex_section">
+    <div class="flex_box">
+      <h2>Member 1</h2>
+      <p>Role: Co-Founder</p>
+    </div>
+    <div class="flex_box">
+      <h2>Member 2</h2>
+      <p>Role: Co-Founder</p>
+    </div>
+    <div class="flex_box">
+      <h2>Member 3</h2>
+      <p>Role: Co-Founder</p>
+    </div>
+    <div class="flex_box">
+      <h2>Member 4</h2>
+      <p>Role: Co-Founder</p>
+    </div>
+    <div class="flex_box">
+      <h2>Member 5</h2>
+      <p>Role: Co-Founder</p>
+    </div>
+    <div class="flex_box">
+      <h2>Member 6</h2>
+      <p>Role: Co-Founder</p>
+    </div>
   </div>
 
-  <div class="flex_box">
-    <h2>Member 2</h2>
-    <p>Role: Co-Founder</p>
-  </div>
-
-  <div class="flex_box">
-    <h2>Member 3</h2>
-    <p>Role: Co-Founder</p>
-  </div>
-
-  <div class="flex_box">
-    <h2>Member 4</h2>
-    <p>Role: Co-Founder</p>
-  </div>
-
-  <div class="flex_box">
-    <h2>Member 5</h2>
-    <p>Role: Co-Founder</p>
-  </div>
-
-  <div class="flex_box">
-    <h2>Member 6</h2>
-    <p>Role: Co-Founder</p>
-  </div>
-</div>
+</body>
+</html>
